# VisionR

./: LICENSE  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt  template.py
Plan/: Plan what all things required and how all what are.md  RIVION_Implementation_Checklist.md  RIVION_Implementation_Report.md  RIVION_Summary.md
Research/: ECG_project_roadmap.md  EmotionAI_Research_Analysis.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: database.py  schema.sql
backend/app/models/: base.py  emotion_log.py  message.py  session.py  user.py
backend/app/routers/: auth.py  chat.py  dashboard.py  emotion.py  health.py
backend/app/schemas/: auth.py  chat.py  dashboard.py  emotion.py
backend/app/services/: burnout_service.py  dashboard_service.py  emotion_service.py  face_emotion_service.py  fusion_service.py  text_emotion_service.py  voice_emotion_service.py
backend/tests/integration/: test_chat_message_endpoint.py
backend/tests/unit/: test_face_emotion_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Dashboard/: BournoutRiskCard.tsx  EmotionDistribution.tsx  EmotionTimeline.tsx  StressGauge.tsx
frontend/src/components/VideoChat/: ChatBox.tsx  EmotionDisplay.tsx  VideoChat.tsx
frontend/src/hooks/: useEmotion.ts  useWebRTC.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx
