[tool.poetry]
name = "rivion-backend"
version = "0.1.0"
description = "RIVION: Real-time Multimodal Emotion-Aware Conversational Agent Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core Backend
fastapi = "0.115.0"
uvicorn = { version = "0.30.0", extras = ["standard"] }

# Database & ORM
SQLAlchemy = "2.0.30"
alembic = "1.13.1"
psycopg2-binary = "2.9.9"

# Auth & Security
python-jose = "3.3.0"
passlib = { version = "1.7.4", extras = ["bcrypt"] }
bcrypt = "4.1.2"

# WebSockets & Uploads
websockets = "12.0"
python-multipart = "0.0.9"

# Face ML
opencv-python = "4.10.0.84"
mediapipe = "0.10.14"
deepface = "0.0.93"

# Voice ML
librosa = "0.10.2"
numpy = "1.26.4"
scipy = "1.13.1"
soundfile = "0.12.1"
torch = "2.3.1"
torchaudio = "2.3.1"

# Text ML
transformers = "4.41.2"
sentencepiece = "0.2.0"
huggingface-hub = "0.23.0"
spacy = "3.7.4"
spacy-transformers = "1.4.5"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }

# JSON & Config
pydantic = "2.7.1"
python-dotenv = "1.0.1"
orjson = "3.10.3"

# Logging & Monitoring
loguru = "0.7.2"

# Cache / Queue
redis = "5.0.4"

# LLM / OpenAI
openai = "1.35.3"

# Utilities
requests = "2.32.2"
tqdm = "4.66.4"
pandas = "2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-asyncio = "0.23.7"
pytest-cov = "5.0.0"
httpx = "0.27.0"
black = "24.4.2"
isort = "5.13.2"
flake8 = "7.1.0"
pylint = "3.2.5"
mypy = "1.10.0"
types-requests = "2.32.0.20240622"
pre-commit = "3.7.1"
coverage = "7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
